--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-lg-4 text-center text-lg-end">
             <div class="d-inline-flex align-items-center" style="height: 45px;">
-                <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>Register</small></a>
+                <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>홍길동님 환영합니다!</small></a>
                 <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
                 <a href="#"><small class="me-3 text-light"><i class="fas fa-power-off me-2"></i> Log Out</small></a>
             </div>
@@ -68,19 +68,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="index.html" class="nav-item nav-link active">홈</a>
-                <a href="" class="nav-item nav-link">숙소 목록</a>
+                <a href="" class="nav-item nav-link">숙소 찾기</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">마이 페이지</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">My Page</a>
                     <div class="dropdown-menu m-0">
                         <a href="" class="dropdown-item">내 정보</a>
-                        <a href="" class="dropdown-item">예약한 내역</a>
+                        <a href="" class="dropdown-item">예약 내역</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">내 숙소</a>
+                    <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">숙소 관리</a>
                     <div class="dropdown-menu m-0">
-                        <a href="" class="dropdown-item">숙소 관리</a>
-                        <a href="" class="dropdown-item">예약된 내역</a>
+                        <a href="" class="dropdown-item">내 숙소 관리</a>
+                        <a href="" class="dropdown-item">예약 관리</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary text-white w-100 py-3" type="submit">Book Now</button>
+                    <button class="btn btn-primary text-white w-100 py-3" type="submit">숙소 검색</button>
                 </div>
             </div>
         </form>
