--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -31,7 +31,8 @@
 
 <body>
 
-
+<div th:replace="~{/fragment/top-bar :: top}"></div>
+<div th:replace="~{/fragment/navigation-bar :: nav}"></div>
 
 <!-- Header Start -->
 <div class="container-fluid bg-breadcrumb">
@@ -171,7 +172,7 @@
     <div class="container">
         <div class="row g-4 align-items-center">
             <div class="col-md-6 text-center text-md-end mb-md-0">
-                <i class="fas fa-copyright me-2"></i><a class="text-white" href="#">Your Site Name</a>, All right reserved.
+                <i class="fas fa-copyright me-2"></i><a class="text-white" href="#">심사숙박</a>, All right reserved.
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
