Comment: "메인페이지 검색 UI 수정"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,13 +50,13 @@
                 <div class="col-md-2">
                     <div class="form-floating">
                         <input type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2" value="2024-05-01">
-                        <label>CheckIn </label>
+                        <label>입실 </label>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-floating">
                         <input type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2" value="2024-05-01">
-                        <label>CheckOut </label>
+                        <label>퇴실 </label>
                     </div>
                 </div>
                 <div class="col-md-2">
