--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -428,6 +428,11 @@
 }
 /*** About End ***/
 
+/*** Room Condition Start ***/
+.room-condition {
+    margin: auto;
+}
+/*** Room Condition End ***/
 
 /*** Services Start ***/
 .service .service-content-inner {
@@ -1093,8 +1098,8 @@
     height: 100px; 
     top: 0; left: 50%; 
     transform: translate(-50%, -50%);
-    border: 3px solid var(--bs-primary); 
-    border-style: dotted;
+    /*border: 3px solid var(--bs-primary); */
+    /*border-style: dotted;*/
     border-radius: 50%;
 }
 
@@ -1166,8 +1171,11 @@
 }
 
 .testimonial .testimonial-carousel .owl-item.center .testimonial-item .testimonial-img {
-    border: 3px solid var(--bs-white); 
-    border-style: dotted;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    top: 0;
+    left: 50%;
     transition: 0.5s;
 }
 /*** Testimonial End ***/
@@ -1182,6 +1190,15 @@
     color: var(--bs-primary) !important;
 }
 /*** Contact End ***/
+
+/*** Image Container Start ***/
+.img-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+/*** Image Container End ***/
 
 /*** Subscribe Start ***/
 .subscribe {
