--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -37,7 +37,7 @@
 <!-- Header Start -->
 <div class="container-fluid bg-breadcrumb">
     <div class="container text-center py-5" style="max-width: 900px;">
-        <h1 class="text-white display-3 mb-4">About Us</h1>
+        <h1 class="text-white display-3 mb-4">숙소 상세</h1>
         <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item"><a href="#">Pages</a></li>
