--- a/src/main/resources/templates/fragment/navigation-bar.html
+++ b/src/main/resources/templates/fragment/navigation-bar.html
@@ -22,8 +22,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">홈</a>
-                <a href="" class="nav-item nav-link">숙소 찾기</a>
+                <a href="/" class="nav-item nav-link active">홈</a>
+                <a href="/accommodation/1" class="nav-item nav-link">숙소 찾기</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">My Page</a>
                     <div class="dropdown-menu m-0">
