--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -375,7 +375,7 @@
                 <div class="row g-2" style="display: flex; justify-content: center">
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/QnKx0FXS_ZE?rel=0" title="YouTube video" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -385,7 +385,7 @@
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/Tf72rhcqhkE?rel=0" title="YouTube video" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
