--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,14 +14,14 @@
 <div class="container right-panel-active height-500">
     <!-- Sign Up -->
     <div class="container__form container--signup sign-up">
-        <form action="#" class="form" id="form1">
+        <form action="/member/register" class="form" id="form1" method="post">
             <h2 class="form__title">Sign Up</h2>
-            <input type="text" placeholder="이름" class="input" />
+            <input type="text" placeholder="이름" class="input" name="name"/>
             <div style="display: flex">
-                <input type="email" placeholder="Email" class="input" />
-                <button style="margin-left: 20px">중복확인</button>
+                <input type="email" placeholder="Email" class="input" name="email"/>
+                <button type="button" style="margin-left: 20px">중복확인</button>
             </div>
-            <input type="password" placeholder="Password" class="input" />
+            <input type="password" placeholder="Password" class="input" name="password" />
             <input type="password" placeholder="Password 확인" class="input">
             <span class="error-message"></span>
             <fieldset>
@@ -32,21 +32,21 @@
             </fieldset>
             <input type="tel" placeholder="Phone Number" name="phone" pattern="[0-9]{11}" required class="input">
             <small>생일</small>
-            <input type="date" class="input" name="birth-date" >
-            <button class="btn">Sign Up</button>
+            <input type="date" value="2017-06-01" class="input" name="birthDate" >
+            <button class="btn" type="submit">Sign Up</button>
         </form>
     </div>
 
     <!-- Sign In -->
-    <div class="container__form container--signin">
-        <form action="#" class="form" id="form2">
-            <h2 class="form__title">Sign In</h2>
-            <input type="email" placeholder="Email" class="input" />
-            <input type="password" placeholder="Password" class="input" />
-            <a href="#" class="link">Forgot your password?</a>
-            <button class="btn">Sign In</button>
-        </form>
-    </div>
+<!--    <div class="container__form container&#45;&#45;signin">-->
+<!--        <form action="#" class="form" id="form2">-->
+<!--            <h2 class="form__title">Sign In</h2>-->
+<!--            <input type="email" placeholder="Email" class="input" />-->
+<!--            <input type="password" placeholder="Password" class="input" />-->
+<!--            <a href="#" class="link">Forgot your password?</a>-->
+<!--            <button class="btn">Sign In</button>-->
+<!--        </form>-->
+<!--    </div>-->
 
     <!-- Overlay -->
     <div class="container__overlay">
