feat : Youtube API 연동

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -375,23 +375,7 @@
     <div class="tab-class text-center">
         <div class="tab-content">
             <div id="GalleryTab-1" class="tab-pane fade show p-0 active">
-                <div class="row g-2" style="display: flex; justify-content: center">
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/QnKx0FXS_ZE?rel=0" title="YouTube video" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/Tf72rhcqhkE" title="YouTube video" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+                <div id="youtube" class="row g-2" style="display: flex; justify-content:center"></div>
             </div>
         </div>
     </div>
