Feat: AccommodationController 분리, 상세페이지 다른

--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -63,7 +63,7 @@
                                 <i class="fa fa-globe fa-4x text-primary"></i>
                             </div>
                             <div class="service-content">
-                                <h5 class="mb-4">숙소명</h5>
+                                <h5 class="mb-4"><a href="/accommodation/1">숙소명</a></h5>
                                 <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
                                 </p>
                                 <div class="row gy-2 gx-4 mb-4">
@@ -95,7 +95,7 @@
                                 <i class="fa fa-globe fa-4x text-primary"></i>
                             </div>
                             <div class="service-content">
-                                <h5 class="mb-4">숙소명</h5>
+                                <h5 class="mb-4"><a href="/accommodation/2">숙소명</a></h5>
                                 <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
                                 </p>
                                 <div class="row gy-2 gx-4 mb-4">
@@ -127,7 +127,7 @@
                                 <i class="fa fa-globe fa-4x text-primary"></i>
                             </div>
                             <div class="service-content">
-                                <h5 class="mb-4">숙소명</h5>
+                                <h5 class="mb-4"><a href="/accommodation/3">숙소명</a></h5>
                                 <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
                                 </p>
                                 <div class="row gy-2 gx-4 mb-4">
