--- a/src/main/resources/templates/fragment/navigation-bar.html
+++ b/src/main/resources/templates/fragment/navigation-bar.html
@@ -13,7 +13,7 @@
 <!-- Navbar & Hero Start -->
 <div class="container-fluid position-relative p-0" th:fragment="nav">
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-        <a href="" class="navbar-brand p-0">
+        <a href="/" class="navbar-brand p-0">
             <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>심사 숙박</h1>
             <!-- <img src="img/logo.png" alt="Logo"> -->
         </a>
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="/" class="nav-item nav-link active">홈</a>
-                <a href="/accommodation/1" class="nav-item nav-link">숙소 찾기</a>
+                <a href="" class="nav-item nav-link">숙소 찾기</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">My Page</a>
                     <div class="dropdown-menu m-0">
@@ -34,7 +34,7 @@
                 <div class="nav-item dropdown">
                     <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">숙소 관리</a>
                     <div class="dropdown-menu m-0">
-                        <a href="" class="dropdown-item">내 숙소 관리</a>
+                        <a href="/myAccommodation/1" class="dropdown-item">내 숙소 관리</a>
                         <a href="" class="dropdown-item">예약 관리</a>
                     </div>
                 </div>
