refactor : Youtube API 조회 실패 시, 화면 영역 제외

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -365,12 +365,11 @@
 <!-- 인기 지역 끝 -->
 
 <!-- 유튜브 추천 -->
-<div class="container-fluid gallery py-5 my-5">
+<article id="youtube-container"  class="container-fluid gallery py-5 my-5">
     <div class="mx-auto text-center mb-5" style="max-width: 900px;">
         <h5 class="section-title px-3">Recommendations</h5>
         <h1 class="mb-4">추천 여행지</h1>
-        <p class="mb-0">떠나고 싶지만, 아직 여행지를 정하지 못하셨나요? 당신을 위한 Youtube 여행지 추천!
-        </p>
+        <p class="mb-0">떠나고 싶지만, 아직 여행지를 정하지 못하셨나요? 당신을 위한 Youtube 여행지 추천!</p>
     </div>
     <div class="tab-class text-center">
         <div class="tab-content">
@@ -379,7 +378,7 @@
             </div>
         </div>
     </div>
-</div>
+</article>
 <!-- 유튜브 추천 끝 -->
 
 
@@ -391,9 +390,6 @@
                 <i class="fas fa-copyright me-2"></i><a class="text-white" href="#">심사숙박</a>, All right reserved.
             </div>
             <div class="col-md-6 text-center text-md-start">
-                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
                 Designed By <a class="text-white" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a>
             </div>
         </div>
@@ -418,13 +414,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js" integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.standalone.min.css">
-
+<script src="/js/common/datepicker.js"></script>
+<!---->
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
-<!-- Datepicker -->
-<script src="/js/common/datepicker.js"></script>
-
 </body>
 
 </html>
