--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -124,6 +124,9 @@
                 </div>
             </div>
         </div>
+        <div class="text-lg-end">
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="#">예약하기</a>
+        </div>
     </div>
 </div>
 
