--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="text-lg-end">
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="#">예약하기</a>
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="/accommodation/1/1/reservationPage">예약하기</a>
         </div>
     </div>
 </div>
