--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -152,6 +152,7 @@
 <script>
     $(function() {
         var selectedDate1 = null; // #date-picker1에서 선택한 날짜를 저장할 변수
+        var selectedDate2 = null; // #date-picker1에서 선택한 날짜를 저장할 변수
 
         $('#date-picker1').datepicker({
             format: "yyyy-mm-dd",
@@ -159,20 +160,7 @@
             endDate: '+1y',
             autoclose: true,
             clearBtn: true,
-            // calendarWeeks : false, //캘린더 옆에 몇 주차인지 보여주는 옵션 기본값 false 보여주려면 true
-            // clearBtn : false, //날짜 선택한 값 초기화 해주는 버튼 보여주는 옵션 기본값 false 보여주려면 true
             datesDisabled: ['2024-05-5', '2024-05-6', '2024-05-7', '2024-05-9', '2024-05-10', '2024-05-11', '2024-05-14'],
-            // daysOfWeekDisabled : [0,6],	//선택 불가능한 요일 설정 0 : 일요일 ~ 6 : 토요일
-            // daysOfWeekHighlighted : [3], //강조 되어야 하는 요일 설정
-            // disableTouchKeyboard : false,	//모바일에서 플러그인 작동 여부 기본값 false 가 작동 true가 작동 안함.
-            // immediateUpdates: false,	//사용자가 보는 화면으로 바로바로 날짜를 변경할지 여부 기본값 :false
-            // multidate : false, //여러 날짜 선택할 수 있게 하는 옵션 기본값 :false
-            // multidateSeparator :",", //여러 날짜를 선택했을 때 사이에 나타나는 글짜 2019-05-01,2019-06-01
-            // templates : {
-            //     leftArrow: '&laquo;',
-            //     rightArrow: '&raquo;'
-            // }, //다음달 이전달로 넘어가는 화살표 모양 커스텀 마이징
-            // showWeekDays : true ,// 위에 요일 보여주는 옵션 기본값 : true
             todayHighlight: true,
             toggleActive: true,
             weekStart: 0,
@@ -182,7 +170,6 @@
             var disabledDates = ['2024-05-5', '2024-05-6', '2024-05-7', '2024-05-9', '2024-05-10', '2024-05-11', '2024-05-14'];
             var nextAvailableDate = null;
 
-            // Iterate through disabledDates to find the first date after selectedDate1
             for (var i = 0; i < disabledDates.length; i++) {
                 var disabledDate = new Date(disabledDates[i]);
                 if (disabledDate > selectedDate1) {
@@ -191,14 +178,12 @@
                 }
             }
 
-            // If nextAvailableDate is found, set it as the startDate for #date-picker2
             if (nextAvailableDate) {
                 var startDatePicker2 = new Date(selectedDate1);
                 startDatePicker2.setDate(startDatePicker2.getDate() + 1); // 선택한 날짜에서 하루를 더함
                 $('#date-picker2').datepicker('setStartDate', startDatePicker2); // #date-picker1에서 선택한 날짜로 시작
                 $('#date-picker2').datepicker('setEndDate', nextAvailableDate);
             } else {
-                // If there are no available dates after selectedDate1, remove endDate restriction
                 var startDatePicker2 = new Date(selectedDate1);
                 startDatePicker2.setDate(startDatePicker2.getDate() + 1); // 선택한 날짜에서 하루를 더함
                 $('#date-picker2').datepicker('setStartDate', startDatePicker2);
@@ -210,22 +195,37 @@
             format: "yyyy-mm-dd",
             autoclose: true,
             clearBtn: true,
-            // calendarWeeks : false, //캘린더 옆에 몇 주차인지 보여주는 옵션 기본값 false 보여주려면 true
-            // clearBtn : false, //날짜 선택한 값 초기화 해주는 버튼 보여주는 옵션 기본값 false 보여주려면 true
-            // daysOfWeekDisabled : [0,6],	//선택 불가능한 요일 설정 0 : 일요일 ~ 6 : 토요일
-            // daysOfWeekHighlighted : [3], //강조 되어야 하는 요일 설정
-            // disableTouchKeyboard : false,	//모바일에서 플러그인 작동 여부 기본값 false 가 작동 true가 작동 안함.
-            // immediateUpdates: false,	//사용자가 보는 화면으로 바로바로 날짜를 변경할지 여부 기본값 :false
-            // multidate : false, //여러 날짜 선택할 수 있게 하는 옵션 기본값 :false
-            // multidateSeparator :",", //여러 날짜를 선택했을 때 사이에 나타나는 글짜 2019-05-01,2019-06-01
-            // templates : {..
-            //     leftArrow: '&laquo;',
-            //     rightArrow: '&raquo;'
-            // }, //다음달 이전달로 넘어가는 화살표 모양 커스텀 마이징
-            // showWeekDays : true ,// 위에 요일 보여주는 옵션 기본값 : true
+            startDate: '0d',
+            endDate: '+1y',
+            datesDisabled: ['2024-05-6', '2024-05-7', '2024-05-8', '2024-05-10', '2024-05-11', '2024-05-12', '2024-05-15'],
             todayHighlight: true,
             toggleActive: true,
             weekStart: 0,
+        }).on('changeDate', function(selected) {
+            selectedDate2 = selected.date; // 선택한 날짜를 변수에 저장
+
+            var disabledDates = ['2024-05-6', '2024-05-7', '2024-05-8', '2024-05-10', '2024-05-11', '2024-05-12', '2024-05-15'];
+            var nextAvailableDate = null;
+
+            for (var i = disabledDates.length - 1; i >= 0; i--) {
+                var disabledDate = new Date(disabledDates[i]);
+                if (disabledDate < selectedDate2) {
+                    nextAvailableDate = disabledDate;
+                    break;
+                }
+            }
+
+            if (nextAvailableDate) {
+                var startDatePicker2 = new Date(selectedDate2);
+                startDatePicker2.setDate(startDatePicker2.getDate() - 1);
+                $('#date-picker1').datepicker('setStartDate', nextAvailableDate);
+                $('#date-picker1').datepicker('setEndDate', startDatePicker2);
+            } else {
+                var startDatePicker2 = new Date(selectedDate2);
+                startDatePicker2.setDate(startDatePicker2.getDate() - 1);
+                $('#date-picker1').datepicker('setStartDate', null);
+                $('#date-picker1').datepicker('setEndDate', startDatePicker2);
+            }
         });
     });
 </script>
