--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -29,7 +29,31 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/reservationForm.css" rel="stylesheet">
 
+    <style>
+        /* 날짜 선택기의 날짜 크기 조정 */
+        .datepicker table tr td,
+        .datepicker table tr th {
+            font-size: 23px;
+            font-weight: bold;
+        }
 
+        /* 날짜를 더 진하게 */
+        .datepicker table tr td.active,
+        .datepicker table tr td.active:hover,
+        .datepicker table tr td.active.disabled,
+        .datepicker table tr td.active.disabled:hover,
+        .datepicker table tr td.active:active,
+        .datepicker table tr td.active:hover:active,
+        .datepicker table tr td.active.disabled:active,
+        .datepicker table tr td.active.disabled:hover:active {
+            background-color: rgba(0, 0, 0, 0.2); /* 진한 회색 배경 */
+        }
+
+        /* 달력 크기 조정 */
+        .datepicker {
+            width: 275px; /* 적당한 크기로 조정하세요 */
+        }
+    </style>
 
 </head>
 
@@ -57,7 +81,7 @@
 
                             <div class="form-floating date" id="date3" data-target-input="nearest">
 
-                                <input type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2" value="2024-04-01">
+                                <input type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
 
 <!--                                <input type="text" class="form-control bg-white border-0" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />-->
                                 <label>CheckIn </label>
@@ -65,7 +89,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating date" id="date4" data-target-input="nearest">
-                                <input type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2" value="2024-04-01">
+                                <input type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
                                 <label>CheckOut</label>
                             </div>
                         </div>
