Register Form test

--- a/src/main/resources/templates/fragment/top-bar.html
+++ b/src/main/resources/templates/fragment/top-bar.html
@@ -16,8 +16,8 @@
       </div>
       <div class="col-lg-4 text-center text-lg-end">
         <div class="d-inline-flex align-items-center" style="height: 45px;">
-          <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>홍길동님 환영합니다!</small></a>
-          <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
+          <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2" th:href="${email}님"></i>환영합니다!</small></a>
+          <a href="/login"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
           <a href="#"><small class="me-3 text-light"><i class="fas fa-power-off me-2"></i> Log Out</small></a>
         </div>
       </div>
