--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script defer src="/static/js/register.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/register.css">
+    <link rel="stylesheet" type="text/css" href="/css/register.css">
 </head>
 <body>
 <div class="container right-panel-active height-500">
@@ -38,15 +38,15 @@
     </div>
 
     <!-- Sign In -->
-<!--    <div class="container__form container&#45;&#45;signin">-->
-<!--        <form action="#" class="form" id="form2">-->
-<!--            <h2 class="form__title">Sign In</h2>-->
-<!--            <input type="email" placeholder="Email" class="input" />-->
-<!--            <input type="password" placeholder="Password" class="input" />-->
-<!--            <a href="#" class="link">Forgot your password?</a>-->
-<!--            <button class="btn">Sign In</button>-->
-<!--        </form>-->
-<!--    </div>-->
+    <div class="container__form container--signin">
+        <form action="/member/login" method="post" class="form" id="form2">
+            <h2 class="form__title">Sign In</h2>
+            <input type="email" placeholder="Email" class="input email" name="email"/>
+            <input type="password" placeholder="Password" class="input password" name="password"/>
+            <a href="#" class="link">Forgot your password?</a>
+            <button type="submit" class="btn sign-in-button">Sign In</button>
+        </form>
+    </div>
 
     <!-- Overlay -->
     <div class="container__overlay">
@@ -60,5 +60,6 @@
         </div>
     </div>
 </div>
+<script defer src="/js/register.js"></script>
 </body>
 </html>
